<resources>
    <string name="app_name">Examen</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="salir">Salir</string>
    <string name="configuracion">Configuracion</string>
    <string name="mapa">Mapa</string>
    <string name="lugares_turisticos">Lugares Turisticos</string>
    <string name="detalle">Detalles</string>
</resources>