<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/lugares_turisticos" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/baseline_assistant_navigation_24"
            android:title="@string/mapa" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/baseline_settings_24"
            android:title="@string/configuracion" />
        <item
            android:id="@+id/nav_salir"
            android:icon="@drawable/baseline_block_24"
            android:title="@string/salir" />
    </group>
</menu>