<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_gallery">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.laucha.examen.ui.home.HomeFragment"
        android:label="@string/lugares_turisticos"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_nav_home_to_nav_detalle"
            app:destination="@id/nav_detalle" />
    </fragment>

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.laucha.examen.ui.mapa.MapsFragment"
        android:label="@string/mapa"
        tools:layout="@layout/fragment_maps" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.laucha.examen.ui.gallery.GalleryFragment"
        android:label="@string/configuracion"
        tools:layout="@layout/fragment_slideshow" />
    <fragment
        android:id="@+id/nav_salir"
        android:name="com.laucha.examen.ui.slideshow.SlideshowFragment"
        android:label="@string/salir"
        tools:layout="@layout/fragment_slideshow" />
    <fragment
        android:id="@+id/nav_detalle"
        android:name="com.laucha.examen.ui.detalle.DetalleFragment"
        android:label="@string/detalle"
        tools:layout="@layout/fragment_detalle" />
</navigation>